<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.edu.utng.orders.CommentActivity"
    android:background="@drawable/stich">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_comment"
        android:inputType="text"
        android:hint="@string/introduce_comment"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/introduce_message"
        android:layout_below="@+id/et_comment"
        android:id="@+id/et_msg"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/introduce_date_of_create"
        android:id="@+id/et_created"
        android:layout_below="@+id/et_msg"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_comment"
        android:layout_below="@+id/et_created"
        android:id="@+id/bt_save_comment"
        android:background="#1DE9B6"
        android:layout_marginBottom="15dp"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bt_save_comment"
        android:id="@+id/rv_comment_list"

        >

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>